# ExactTranscriber

./: .gitignore  .render-buildpacks.txt  .render-packages.txt  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  api_client.py  app_setup.py  config.py  file_utils.py  main.py  pyproject.toml  render-build.sh  render.yaml  requirements.txt  setup.py  state_manager.py  styles.py  transcript_utils.py  transcription_processor.py  ui_components.py  utils.py
.streamlit/: secrets.toml
attached_assets/: Pasted-Google-Gemini-2-0-for-Podcast-and-Audio-Transcription-Gemini-2-0-can-transcribe-audio-files-like-pod-1741682807852.txt  Pasted-Google-Gemini-2-0-for-Podcast-and-Audio-Transcription-Gemini-2-0-can-transcribe-audio-files-like-pod-1741686589923.txt
tests/: test_api_client.py  test_file_utils.py  test_transcript_utils.py  test_transcription_processor.py
